Refactor students view

--- a/core/app/views/gaku/shared/form_fields/_note_form_fields.html.slim
+++ b/core/app/views/gaku/shared/form_fields/_note_form_fields.html.slim
@@ -1,6 +1,6 @@
-.row-fluid.control-group
+.row-fluid
   .span12
-    = f.text_field :title, :class => "span12 edit_note", :label => t(:'note.title')
-.row-fluid.control-group
+    = f.text_field :title, :class => "edit_note", :label => t(:'note.title')
+.row-fluid
   .span12
-    = f.text_area :content, :class => "span12 edit_note", :size => "0x7", :label => t(:'note.content')
+    = f.text_area :content, :class => "edit_note", :size => "0x7", :label => t(:'note.content')
