--- a/core/app/views/gaku/students/commute_methods/_form.html.slim
+++ b/core/app/views/gaku/students/commute_methods/_form.html.slim
@@ -1,4 +1,3 @@
-=form_for [@student, @commute_method], :remote => true do |f|
-	=f.select :commute_method_type_id, Gaku::CommuteMethodType.all.collect{|s| [s.name.capitalize, s.id]}, :prompt => t('default')
-	=f.submit nil, :class => 'btn btn-primary'
-	=link_to t('cancel'), "",:id => 'cancel-commute-method-link', :class => 'btn'
+= remote_form_for [@student, @commute_method] do |f|
+  = f.select :commute_method_type_id, commute_method_types, :prompt => t('default')
+  = buttons_for @commute_method, :nested_id => 'student-commute-method'
