--- a/core/app/views/gaku/students/guardians/_guardians.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardians.html.slim
@@ -1,30 +1,16 @@
 #guardians-modal
 #student-guardians
-  #new-student-guardian.hide
-  .row-fluid
+  = index_header do
+    #new-student-guardian.hide
     .pull-left
       = count_div 'student-guardians-count' do
         = print_count @student.guardians.count, t_guardian_list
     .pull-right
       = ajax_link_to_new t(:'guardian.add'), [:new, @student, :guardian], :id => "new-student-guardian-link"
-  .row-fluid
-    .span12
-      hr
-  .row-fluid
-    .span12
-      .row-fluid
-        .span12.well.guardians_list
-          = render :partial => 'gaku/students/guardians/guardian', :collection => @student.guardians, :as => 'guardian'
 
-      / table.table.table-striped.table-bordered.table-condensed
-      /   thead
-      /     tr
-      /       th
-      /       th =t("name")+" ("+t("surname")+")"
-      /       th =t("name")+" ("+t("given_name")+")"
-      /       th =t("phonetic_reading") + " ("+t("surname")+")"
-      /       th =t("phonetic_reading") + " ("+t("name")+")"
-      /       th =t("guardians.relationship")
-      /       th =t("options")
-      /   tbody
-      /     / =render :partial => 'gaku/students/guardian', :collection => @student.guardians, :as => 'guardian'
+  = hr
+
+  = index_body do
+    .row-fluid
+      .span12.well.guardians_list
+        = render :partial => 'gaku/students/guardians/guardian', :collection => @student.guardians, :as => 'guardian'
