--- a/core/app/views/gaku/students/guardians/edit.js.erb
+++ b/core/app/views/gaku/students/guardians/edit.js.erb
@@ -1,3 +1,3 @@
-$('#guardians-modal').html('<%= render_js_partial("guardian_modal", {:guardian => @guardian}) %>');
+$('#guardians-modal').html('<%= render_js_partial("modal", {:guardian => @guardian}) %>');
 $('#edit-guardian-modal').modal('show');
 $('.remote-form').enableValidations();
