--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -35,13 +35,13 @@
         .span12 style="margin-top:10px;"
           = form_tag( enroll_students_class_group_enrollments_path, :method => "post", :id => "enroll-to-class-form", :remote => true) do
             .span8
-              = select_tag "class_group_id", options_from_collection_for_select(@class_groups, "id", "name"), {:class => "class_group-select"}
+              = select_tag "class_group_id", class_groups, {:class => "class_group-select"}
 
             = submit_tag t(:enroll_to_class), :class => 'btn btn-primary'
         .span12 style="margin-top:10px;"
           = form_tag( enroll_students_course_enrollments_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
             .span8
-              = select_tag "course_id", options_from_collection_for_select(@courses, "id", "code"), {:class => "class_group-select"}
+              = select_tag "course_id", courses, {:class => "class_group-select"}
 
           = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
 
