--- a/core/app/views/gaku/syllabuses/exams/_exam.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_exam.html.slim
@@ -1,4 +1,4 @@
-- unless exam_syllabus.exam.nil? || exam_syllabus.exam.new_record? || !exam_syllabus.exam
+- unless !exam_syllabus.exam or exam_syllabus.exam.nil? or exam_syllabus.exam.new_record?
   tr id="exam-#{exam_syllabus.exam.id}"
-    =render 'gaku/syllabuses/exams/exam_fields', :exam_syllabus => exam_syllabus
-    
+    = render 'gaku/syllabuses/exams/fields', :exam_syllabus => exam_syllabus
+
