--- a/core/app/views/gaku/syllabuses/exams/_select_form.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_select_form.html.slim
@@ -1,8 +1,5 @@
-= form_for [@syllabus, Gaku::ExamSyllabus.new], :url => syllabus_exam_syllabuses_path(@syllabus), :remote => true, :method => 'post' do |f|
-  .fields
-    b = t('exam.choose')
-    =f.label :exam_id
-    =f.select :exam_id, Gaku::Exam.all.reject {|e| @syllabus.exams.include?(e)}.collect{ |exam| ["#{exam.name}", exam.id]},{:prompt => t('exam.choose')}, {:class => 'chzn-select'}
-  .actions
-		.row-fluid
-			= buttons_for @syllabus, :nested_id => 'existing-exam', :label => t('exam.add')
+= remote_form_for [@syllabus, Gaku::ExamSyllabus.new], :url => syllabus_exam_syllabuses_path(@syllabus), :method => 'post' do |f|
+
+  = f.select :exam_id, Gaku::Exam.all.reject {|e| @syllabus.exams.include?(e)}.collect{ |exam| ["#{exam.name}", exam.id]}, {:prompt => t('exam.choose')}, {:class => 'chzn-select'}
+
+  = buttons_for @syllabus, :nested_id => 'existing-exam', :label => t('exam.add')
