--- a/core/app/views/gaku/syllabuses/exams/destroy.js.erb
+++ b/core/app/views/gaku/syllabuses/exams/destroy.js.erb
@@ -1,2 +1,2 @@
-$('.exams-count').html('<%= print_count(@count, t_exam_list) %>');
+$('.exams-count').html('<%= print_count(@count-1, t_exam_list) %>');
 showNotice("<%= render_flash %>");
