--- a/core/app/views/gaku/class_groups/semesters/_form.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_form.html.slim
@@ -1,12 +1,4 @@
 = remote_form_for [@class_group, @semester] do |f|
-  .row-fluid.mt-l
-    .span12.well
-      .row-fluid
-        .span6
-          = f.date_select :starting, :class => "span12", :order => [:year,:month,:day], :label => t(:'semester.starting')
-        .span6
-          = f.date_select :ending, :class => "span12", :order => [:year,:month,:day], :label => t(:'semester.ending')
-        = f.hidden_field :class_group_id, :value => @class_group.id
-      .row-fluid
-        = buttons_for @semester, :nested_id => 'class-group-semester'
+  = render 'form_fields', :f => f
+  = buttons_for @semester, :nested_id => 'class-group-semester'
 
