--- a/core/app/views/gaku/class_groups/_form_fields.html.slim
+++ b/core/app/views/gaku/class_groups/_form_fields.html.slim
@@ -1,6 +1,6 @@
 .span4
-  = f.number_field :grade, :class => "span12", :label => t(:'class_group.grade')
+  = f.number_field :grade, :label => t(:'class_group.grade')
 .span4
-  = f.text_field :name, :class => "span12", :label => t(:'class_group.name')
+  = f.text_field :name, :label => t(:'class_group.name')
 .span4
-  = f.text_field :homeroom, :class => "span12", :label => t(:'class_group.homeroom')
+  = f.text_field :homeroom, :label => t(:'class_group.homeroom')
