--- a/core/app/views/gaku/class_groups/courses/_form.html.slim
+++ b/core/app/views/gaku/class_groups/courses/_form.html.slim
@@ -1,8 +1,5 @@
 = remote_form_for [@class_group, @class_group_course_enrollment] do |f|
-  .row-fluid
-    .span12.well
-      = f.select :course_id, courses, {:prompt => t(:'course.choose')}, :class => "span12", :label => t(:'course.code')
-      = f.hidden_field :class_group_id, :value => @class_group.id
+  = f.select :course_id, courses, {:prompt => t(:'course.choose')}, :label => t(:'course.code')
+  = f.hidden_field :class_group_id, :value => @class_group.id
 
-  .row-fluid
-  	= buttons_for @class_group_course_enrollment, :nested_id => 'class-group-course'
+  = buttons_for @class_group_course_enrollment, :nested_id => 'class-group-course'
