--- a/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
@@ -1,7 +1,7 @@
-= index_head do
+= index_header do
   #new-class-group-semester-form-errors
   #new-class-group-semester.hide
-    = render 'gaku/class_groups/semesters/form'
+    /= render 'gaku/class_groups/semesters/form'
   .pull-left
     = count_div 'class-group-semesters-count' do
       = print_count @class_group.semesters.count, t_semester_list
