--- a/core/app/views/gaku/class_groups/semesters/new.js.erb
+++ b/core/app/views/gaku/class_groups/semesters/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-class-group-semester').slideToggle();
+$('#new-class-group-semester').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-class-group-semester-link').hide();
 $('.remote-form').enableValidations();
