--- a/core/app/views/gaku/class_groups/students/_students.html.slim
+++ b/core/app/views/gaku/class_groups/students/_students.html.slim
@@ -1,11 +1,11 @@
 #class-group-students
-  = index_head do
+  = index_header do
     .pull-left
       = count_div 'class-group-enrollments-count' do
         = print_count @class_group.class_group_enrollments.count, t_student_list
     .pull-right
       = ajax_link_to_new t(:'student.add'), student_chooser_class_group_path(:class_group_id => @class_group.id), :id => 'new-class-group-student-link'
-      
+
   = hr
 
   = index_body do
