--- a/core/app/views/gaku/courses/index.html.slim
+++ b/core/app/views/gaku/courses/index.html.slim
@@ -11,4 +11,4 @@
   .pull-right
     = ajax_link_to_new t(:'course.new'), [:new, :course], :id => "new-course-link"
 
-= render 'gaku/courses/courses'
+= render 'courses'
