--- a/admissions/app/views/gaku/admin/admissions/create_multiple.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/create_multiple.js.erb
@@ -7,3 +7,7 @@ showNotice("<%= render_flash %>");
     $('#state<%= record.admission_phase_state.id.to_s %> #students-index tbody').append('<%= render_js_partial("gaku/admin/admissions/student", :student => record.admission.student, :state => record.admission_phase_state) %>');
   <% } %>
 <% end %>
+
+<%- @admission_method.admission_phases.each {|phase| %>
+  $('#phase_<%= phase.id %>_tab').text('<%= phase.name + '(' + phase.admission_phase_records.count.to_s + ')'%>');
+<% } %>
