[view] unproper appending

--- a/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
+++ b/core/app/views/gaku/class_groups/semesters/_semesters.html.slim
@@ -12,7 +12,8 @@
 
 = index_body do
   = table_for 'class-group-semesters-index' do
-    tr
+    thead
+      tr
       = th t(:'period')
       = th_actions 2
     tbody
