--- a/core/app/views/gaku/exams/new.js.erb
+++ b/core/app/views/gaku/exams/new.js.erb
@@ -1,2 +1,3 @@
-$('#new-exam').slideDown();
-$('#new-exam-link').hide()
+$('#new-exam').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-exam-link').hide();
+$('.remote-form').enableValidations();
