--- a/core/app/views/gaku/notes/new.js.erb
+++ b/core/app/views/gaku/notes/new.js.erb
@@ -1,3 +1,3 @@
-$('#new-<%=notable_resource%>-note').html('<%= render_js_partial("form") %>').slideToggle();
-$('#new-<%=notable_resource%>-note-link').hide();
+$('#new-<%= @notable_resource%>-note').html('<%= render_js_partial("form") %>').slideToggle();
+$('#new-<%= @notable_resource%>-note-link').hide();
 $('.remote-form').enableValidations();
