--- a/core/app/views/gaku/notes/show.html.slim
+++ b/core/app/views/gaku/notes/show.html.slim
@@ -1,16 +1,15 @@
--unless @note.nil? or @note.new_record? or !@note
-  .row-fluid
-    .span12.well
-      = table_for '#{@notable_resource}-note-table' do
-        thead
-          tr
-            th
-            th = t(:'note.title')
-            th = t(:'note.content')
-        tbody
-          td = @note.id
-          td = @note.title
-          td = @note.content
-  .row-fluid
-    .span12.well
-      = link_to_back :back, :class => "span3 btn btn-danger"
+- unless @note.nil? or @note.new_record? or !@note
+  = well_div do
+    = table_for '#{@notable_resource}-note-table' do
+      thead
+        tr
+          = th t(:id)
+          = th t(:'note.title')
+          = th t(:'note.content')
+      tbody
+        td = @note.id
+        td = @note.title
+        td = @note.content
+
+  = well_div do
+      = link_to_back :back, :class => "span12 btn btn-danger"
