--- a/core/app/views/gaku/exams/update.js.erb
+++ b/core/app/views/gaku/exams/update.js.erb
@@ -1,5 +1,5 @@
 
 $('#edit-exam-modal').modal('hide');
 $('table#exams-index tbody').html('<%= render_js_partial("exam", {:exam => @exam}) %>');
-$('#exam-show').html('<%= escape_javascript(render :partial => "gaku/exams/exam_show", :formats => [:html], :handlers => [:erb, :slim],  :exam => @exam) %>');
+$('#exam-show').html('<%= escape_javascript(render :partial => "gaku/exams/show_table", :formats => [:html], :handlers => [:erb, :slim],  :exam => @exam) %>');
 showNotice("<%= render_flash %>");
