Refactor admin/schools

--- a/core/app/views/gaku/admin/schools/_school_unit.html.slim
+++ b/core/app/views/gaku/admin/schools/_school_unit.html.slim
@@ -1,4 +1,4 @@
-= render 'school_fields', :school => school
+= render 'fields', :school => school
 td
   = link_to_show [:admin, school]
   - unless school == @master_school
