--- a/core/app/views/gaku/admin/schools/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/_form.html.slim
@@ -1,7 +1,3 @@
 = remote_form_for [:admin, @school] do |f|
-  .row-fluid.mt-l
-    .span12.well
-      .span12.well
-        = render 'school_form_fields', :f => f
-        .row-fluid
-          = buttons_for @school, :nested_id => 'admin-school'
+  = render 'form_fields', :f => f
+  = buttons_for @school, :nested_id => 'admin-school'
