--- a/core/app/views/gaku/admin/schools/campuses/contacts/edit.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-dialogs').html('<%== render_js_partial("contact_modal", {:contact => @contact}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("modal", {:contact => @contact}) %>');
 $('#edit-contact-modal').modal('show');
 $('.remote-form').enableValidations();
