--- a/core/app/views/gaku/admin/schools/campuses/edit.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-dialogs').html('<%= render_js_partial("campus_modal", {:campus => @campus}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("modal", {:campus => @campus}) %>');
 $('#edit-campus-modal').modal('show');
 $('.remote-form').enableValidations();
