--- a/core/app/views/gaku/admin/schools/index.html.slim
+++ b/core/app/views/gaku/admin/schools/index.html.slim
@@ -1,26 +1,29 @@
-#admin-schools
-  = render 'master_school', :master_school => @master_school if @master_school
-  .row-fluid
-    #new-admin-school.hide
-    .pull-left
-      = count_div 'admin-schools-count' do
-        = print_count @count, t_school_list
-    .pull-right
-      = ajax_link_to_new t(:'school.add'), [:new, :admin, :school], :id => 'new-admin-school-link'
-  .row-fluid
-    = table_for 'admin-schools-index' do
-      thead
-        tr
-          = th t(:'school.code')
-          = th t(:'school.name')
-          = th t(:'school.campuses')
-          = th t(:'school.slogan')
-          = th t(:'school.description')
-          = th t(:'school.founded')
-          = th t(:'school.principal')
-          = th t(:'school.vice_principal')
-          = th t(:'school.grades')
-          = th t(:'contact.plural')
-      tbody
-        = render :partial => 'gaku/admin/schools/school', :collection => @schools, :as => 'school'
-    br/
+= content_for :index_header do
+  .pull-left
+    = count_div 'admin-schools-count' do
+      = print_count @count, t_school_list
+  .pull-right
+    = ajax_link_to_new t(:'school.add'), [:new, :admin, :school], :id => 'new-admin-school-link'
+
+= content_for :new_form do
+  #new-admin-school.hide
+
+
+= render 'master_school', :master_school => @master_school if @master_school
+
+
+= table_for 'admin-schools-index' do
+  thead
+    tr
+      = th t(:'school.code')
+      = th t(:'school.name')
+      = th t(:'school.campuses')
+      = th t(:'school.slogan')
+      = th t(:'school.description')
+      = th t(:'school.founded')
+      = th t(:'school.principal')
+      = th t(:'school.vice_principal')
+      = th t(:'school.grades')
+      = th_actions 3
+  tbody
+    = render :partial => 'gaku/admin/schools/school', :collection => @schools, :as => 'school'
