--- a/core/app/views/gaku/admin/commute_method_types/_form.html.slim
+++ b/core/app/views/gaku/admin/commute_method_types/_form.html.slim
@@ -1,9 +1,3 @@
 = remote_form_for [:admin, @commute_method_type] do |f|
-  .row-fluid.mt-l
-    .span12.well
-      .span12.well
-        .row-fluid.control-group
-          .span12
-            = f.text_field :name, :class => "span12", :label => t(:'commute_method_type.name')
-        .row-fluid
-          = buttons_for @commute_method_type, :nested_id => 'admin-commute-method-type'
+  = f.text_field :name, :label => t(:'commute_method_type.name')
+  = buttons_for @commute_method_type, :nested_id => 'admin-commute-method-type'
