--- a/core/app/views/gaku/admin/commute_method_types/index.html.slim
+++ b/core/app/views/gaku/admin/commute_method_types/index.html.slim
@@ -1,18 +1,18 @@
-#admin-commute-method-types
+= content_for :index_header do
+	.pull-left
+		= count_div 'admin-commute-method-types-count' do
+			= print_count @count, t_commute_method_type_list
+	.pull-right
+		= ajax_link_to_new t(:'commute_method_type.new'), [:new, :admin, :commute_method_type], :id => 'new-admin-commute-method-type-link'
+
+= content_for :new_form do
 	#new-admin-commute-method-type.hide
-		= render('form')
-	.row-fluid
-		.pull-left
-			= count_div 'admin-commute-method-types-count' do
-				= print_count @count, t_commute_method_type_list
-		.pull-right
-			= ajax_link_to_new t(:'commute_method_type.new'), [:new, :admin, :commute_method_type], :id => 'new-admin-commute-method-type-link'
-	.row-fluid
-		.span12
-			= table_for 'admin-commute-method-types-index' do
-			  thead
-			    tr
-			      = th t(:'commute_method_type.plural')
-			      = th_actions 2
-			    tbody
-			    	= render :partial => 'commute_method_type', :collection => @commute_method_types, :as => :commute_method_type
+
+#admin-commute-method-types
+	= table_for 'admin-commute-method-types-index' do
+	  thead
+	    tr
+	      = th t(:'commute_method_type.plural')
+	      = th_actions 2
+	    tbody
+	    	= render :partial => 'commute_method_type', :collection => @commute_method_types, :as => :commute_method_type
