--- a/core/app/views/gaku/admin/commute_method_types/update.js.erb
+++ b/core/app/views/gaku/admin/commute_method_types/update.js.erb
@@ -1,3 +1,3 @@
-$('tr#commute-method-type-<%= @commute_method_type.id %>').html('<%= render_js_partial("commute_method_type_fields", {:commute_method_type => @commute_method_type}) %>');
+$('tr#commute-method-type-<%= @commute_method_type.id %>').html('<%= render_js_partial("fields", {:commute_method_type => @commute_method_type}) %>');
 $("#edit-commute-method-type-modal").modal("hide");
 showNotice("<%= render_flash %>");
