--- a/core/app/views/gaku/exams/exam_portions/attachments/_form_fields.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/attachments/_form_fields.html.slim
@@ -1,3 +1,3 @@
-=f.text_field :name, :label => t('attachment.name')
-=f.text_area :description, :rows => 8, :label => t('attachment.description')
-=f.file_field :asset, :label => t('attachment.assets')
+= f.text_field :name, :label => t(:'attachment.name')
+= f.text_area :description, :rows => 8, :label => t(:'attachment.description')
+= f.file_field :asset, :label => t(:'attachment.assets')
