--- a/core/app/views/gaku/exams/exam_portions/edit.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/edit.js.erb
@@ -1,2 +1,3 @@
-$('#modal-dialogs').html('<%== render_js_partial("gaku/exams/exam_portions/modal", {:exam_portion => @exam_portion}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("modal", {:exam_portion => @exam_portion}) %>');
 $('#edit-exam-exam-portion-modal').modal('show');
+$('.remote-form').enableValidations();
