--- a/core/app/views/gaku/admin/contact_types/index.html.slim
+++ b/core/app/views/gaku/admin/contact_types/index.html.slim
@@ -1,18 +1,18 @@
-#admin-contact-types
+= content_for :index_header do
+  .pull-left
+    = count_div 'admin-contact-types-count' do
+      = print_count @count, t_contact_type_list
+  .pull-right
+    = ajax_link_to_new t(:'contact_type.add'), [:new, :admin, :contact_type], :id => 'new-admin-contact-type-link'
+
+= content_for :new_form do
   #new-admin-contact-type.hide
-    = render 'form'
-  .row-fluid
-    .pull-left
-      = count_div 'admin-contact-types-count' do
-        = print_count @count, t_contact_type_list
-    .pull-right
-      = ajax_link_to_new t(:'contact_type.add'), [:new, :admin, :contact_type], :id => 'new-admin-contact-type-link'
-  .row-fluid
-    = table_for 'admin-contact-types-index' do
-      thead
-        tr
-          = th t(:'contact_type.singular')
-          = th_actions 2
-      tbody
-        = render :partial => 'contact_type', :collection => @contact_types, :as => 'contact_type'
-    br/
+
+#admin-contact-types
+  = table_for 'admin-contact-types-index' do
+    thead
+      tr
+        = th t(:'contact_type.singular')
+        = th_actions 2
+    tbody
+      = render :partial => 'contact_type', :collection => @contact_types, :as => 'contact_type'
