--- a/core/app/views/gaku/admin/disposals/_exam.html.slim
+++ b/core/app/views/gaku/admin/disposals/_exam.html.slim
@@ -1,9 +1,9 @@
-- unless exam.nil? || exam.new_record? || !exam
+- unless exam.nil? or exam.new_record? or !exam
   tr
-    td= exam.name
-    td= exam.description
-    td= exam.adjustments
-    td= exam.weight
-    td= exam.use_weighting
+    td = exam.name
+    td = exam.description
+    td = exam.adjustments
+    td = exam.weight
+    td = exam.use_weighting
     td
       = ajax_link_to_delete exam , :id => 'delete-syllabus-exam-link'
