--- a/core/app/views/gaku/admin/disposals/exams.html.slim
+++ b/core/app/views/gaku/admin/disposals/exams.html.slim
@@ -1,16 +1,16 @@
-.row-fluid
-  table#exams-index.index.table.table-condensed.table-striped.table-bordered
+= well_div do
+  = table_for 'exams-index' do
     thead
       tr
-        th.btn-inverse = t('exam.name')
-        th.btn-inverse = t('exam.description')
-        th.btn-inverse = t('exam.adjustments')
-        th.btn-inverse = t('exam.weight')
-        th.btn-inverse = t('exam.use_weighting')
-        th.btn-info style="width:94px" = t('manage')
+        = th t(:'exam.name')
+        = th t(:'exam.description')
+        = th t(:'exam.adjustments')
+        = th t(:'exam.weight')
+        = th t(:'exam.use_weighting')
+        = th_actions 3
     tbody
       - if @exams.any?
         = render :partial => 'gaku/admin/disposals/exam', :collection => @exams, :as => :exam
       - else
         .alert.alert-danger.no-exam-msg
-          = t('notice.no_resource_assign_first', :resource => t('exam.singular'))
+          = t(:'notice.no_resource_assign_first', :resource => t(:'exam.singular'))
