--- a/core/app/views/gaku/admin/enrollment_status_types/_form.html.slim
+++ b/core/app/views/gaku/admin/enrollment_status_types/_form.html.slim
@@ -1,8 +1,4 @@
 = remote_form_for [:admin, @enrollment_status_type] do |f|
-  .row-fluid.mt-l
-    .span12.well
-      = f.text_field :name, :class => "span12", :label => t(:'enrollment_status_type.name')
-      = f.check_box :is_active, :label => t(:'enrollment_status_type.active')
-
-  .row-fluid
-    = buttons_for @enrollment_status_type, :nested_id => 'admin-enrollment-status-type'
+  = f.text_field :name, :label => t(:'enrollment_status_type.name')
+  = f.check_box :is_active, :label => t(:'enrollment_status_type.active')
+  = buttons_for @enrollment_status_type, :nested_id => 'admin-enrollment-status-type'
