--- a/core/app/views/gaku/admin/enrollment_status_types/index.html.slim
+++ b/core/app/views/gaku/admin/enrollment_status_types/index.html.slim
@@ -1,18 +1,20 @@
-#admin-enrollment-status-types
+= content_for :index_header do
+  .pull-left
+    = count_div 'admin-enrollment-status-types-count' do
+      = print_count @count, t_enrollment_status_type_list
+  .pull-right
+    = ajax_link_to_new t(:'enrollment_status_type.add'), [:new, :admin, :enrollment_status_type], :id => 'new-admin-enrollment-status-type-link'
+
+= content_for :new_form do
   #new-admin-enrollment-status-type.hide
-  .row-fluid
-    .pull-left
-      = count_div 'admin-enrollment-status-types-count' do
-        = print_count @count, t_enrollment_status_type_list
-    .pull-right
-      = ajax_link_to_new t(:'enrollment_status_type.add'), [:new, :admin, :enrollment_status_type], :id => 'new-admin-enrollment-status-type-link'
-  .row-fluid
-    = table_for 'admin-enrollment-status-types-index' do
-      thead
-        tr
-          = th t(:'enrollment_status_type.singular')
-          = th t(:'enrollment_status_type.active')
-          = th_actions 2
-      tbody
-        = render :partial => 'gaku/admin/enrollment_status_types/enrollment_status_type', :collection => @enrollment_status_types, :as => 'enrollment_status_type'
-    br/
+
+#admin-enrollment-status-types
+  = table_for 'admin-enrollment-status-types-index' do
+    thead
+      tr
+        = th t(:'enrollment_status_type.singular')
+        = th t(:'enrollment_status_type.active')
+        = th_actions 2
+    tbody
+      = render :partial => 'gaku/admin/enrollment_status_types/enrollment_status_type', :collection => @enrollment_status_types, :as => 'enrollment_status_type'
+
