--- a/core/app/views/gaku/admin/presets/grading.html.slim
+++ b/core/app/views/gaku/admin/presets/grading.html.slim
@@ -1,12 +1,11 @@
-=form_tag update_presets_admin_presets_path, :method => :put do
-  .row-fluid
-    .span12.well
-      = fields_for 'presets' do |grading_method|
-        = grading_method.label :grading_method, t('admin.preset.grading.grading_method')
-        = grading_method.text_field :grading_method, :value => @preset_hash[:grading_method]
-      = fields_for 'presets' do |grading_scheme|
-        = grading_scheme.label :grading_scheme, t('admin.preset.grading.grading_scheme')
-        = grading_scheme.text_field :grading_scheme, :value => @preset_hash[:grading_scheme]
-  .row-fluid
-    .span12.well
-      =submit_tag t('admin.preset.save'), :class => 'btn btn-primary'
+= form_tag update_presets_admin_presets_path, :method => :put do
+  = well_div do
+
+    = fields_for :presets do |grading_method|
+      = grading_method.text_field :grading_method, :value => @preset_hash[:grading_method], :label => t(:'admin.preset.grading.grading_method')
+
+    = fields_for :presets do |grading_scheme|
+      = grading_scheme.text_field :grading_scheme, :value => @preset_hash[:grading_scheme], :label => t(:'admin.preset.grading.grading_scheme')
+
+  = well_div do
+    = submit_button t(:'admin.preset.save')
