REfactor admin/attendance_types

--- a/core/app/views/gaku/admin/attendance_types/_attendance_type.html.slim
+++ b/core/app/views/gaku/admin/attendance_types/_attendance_type.html.slim
@@ -1,2 +1,2 @@
 tr id="attendance-type-#{attendance_type.id}"
-  = render 'gaku/admin/attendance_types/attendance_type_fields', :attendance_type => attendance_type
+  = render 'fields', :attendance_type => attendance_type
