--- a/core/app/views/gaku/admin/attendance_types/_form_fields.html.slim
+++ b/core/app/views/gaku/admin/attendance_types/_form_fields.html.slim
@@ -1,6 +1,6 @@
-= f.text_field :name, :class => "span12", :label => t(:'attendance_type.name')
-= f.text_field :color_code, :class => 'span 12', :label => t(:'attendance_type.color_code')
-= f.text_field :credit_rate, :class => 'span 12', :label => t(:'attendance_type.credit_rate')
+= f.text_field :name, :label => t(:'attendance_type.name')
+= f.text_field :color_code, :label => t(:'attendance_type.color_code')
+= f.text_field :credit_rate, :label => t(:'attendance_type.credit_rate')
 = f.check_box :counted_absent, :label => t(:'attendance_type.counted_absent')
 = f.check_box :disable_credit, :label => t(:'attendance_type.disable_credit')
 = f.check_box :auto_credit, :label => t(:'attendance_type.auto_credit')
