--- a/core/app/views/gaku/admin/attendance_types/index.html.slim
+++ b/core/app/views/gaku/admin/attendance_types/index.html.slim
@@ -1,22 +1,24 @@
-#admin-attendance-types
+= content_for :index_header do
+  .pull-left
+    = count_div 'admin-attendance-types-count' do
+      = print_count @count, t_attendance_type_list
+  .pull-right
+    = ajax_link_to_new t(:'attendance_type.add'), [:new, :admin, :attendance_type], :id => 'new-admin-attendance-type-link'
+
+= content_for :new_form do
   #new-admin-attendance-type.hide
-  .row-fluid
-    .pull-left
-      = count_div 'admin-attendance-types-count' do
-        = print_count @count, t_attendance_type_list
-    .pull-right
-      = ajax_link_to_new t(:'attendance_type.add'), [:new, :admin, :attendance_type], :id => 'new-admin-attendance-type-link'
-  .row-fluid
-    = table_for 'admin-attendance-types-index' do
-      thead
-        tr
-          = th t(:'attendance_type.singular')
-          = th t(:'attendance_type.color_code')
-          = th t(:'attendance_type.credit_rate')
-          = th t(:'attendance_type.counted_absent')
-          = th t(:'attendance_type.disable_credit')
-          = th t(:'attendance_type.auto_credit')
-          = th_actions 2
-      tbody
-        = render :partial => 'gaku/admin/attendance_types/attendance_type', :collection => @attendance_types, :as => :attendance_type
-    br/
+
+#admin-attendance-types
+  = table_for 'admin-attendance-types-index' do
+    thead
+      tr
+        = th t(:'attendance_type.singular')
+        = th t(:'attendance_type.color_code')
+        = th t(:'attendance_type.credit_rate')
+        = th t(:'attendance_type.counted_absent')
+        = th t(:'attendance_type.disable_credit')
+        = th t(:'attendance_type.auto_credit')
+        = th_actions 2
+    tbody
+      = render :partial => 'gaku/admin/attendance_types/attendance_type', :collection => @attendance_types, :as => :attendance_type
+
