--- a/core/app/views/gaku/exams/show.html.slim
+++ b/core/app/views/gaku/exams/show.html.slim
@@ -1,18 +1,17 @@
 = content_for :show_header do
   h3 = t(:'exam.show')
-  
+
 = well_div do
   = render 'show_table', :exam => @exam
 
 = well_div do
   #new-exam-exam-portion.hide style='margin-bottom:20px'
-    = render 'gaku/exams/exam_portions/form'
 
   .pull-left
     = count_div 'exam-exam-portions-count' do
       = print_count(@exam.exam_portions.count, t_exam_portion_list)
   .pull-right
-    = ajax_link_to_new t(:'exam.add_portion'), new_exam_exam_portion_path(@exam), :id => 'new-exam-exam-portion-link'
+    = ajax_link_to_new t(:'exam.add_portion'), [:new, @exam, :exam_portion], :id => 'new-exam-exam-portion-link'
 
   = hr
 
