--- a/core/app/views/gaku/exams/exam_portions/_form.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_form.html.slim
@@ -1,5 +1,3 @@
-= remote_form_for @exam, :url => create_exam_portion_exam_path(:id => @exam) do |f|
-  = f.fields_for :exam_portions do |ep_form|
-    - if ep_form.object.new_record?
-      = render 'gaku/shared/form_fields/exam_portion_form_fields', :ep_form => ep_form
-      = buttons_for ep_form.object, :nested_id => 'exam-exam-portion'
+= remote_form_for [@exam, @exam_portion] do |ep_form|
+  = render 'gaku/shared/form_fields/exam_portion_form_fields', :ep_form => ep_form
+  = buttons_for ep_form.object, :nested_id => 'exam-exam-portion'
