--- a/core/app/views/gaku/exams/exam_portions/new.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/new.js.erb
@@ -1,2 +1,2 @@
-$('#new-exam-exam-portion').slideToggle();
-$('#new-exam-exam-portion-link').hide()
+$('#new-exam-exam-portion').html('<%= render_js_partial("form") %>').slideDown();
+$('#new-exam-exam-portion-link').hide();
