--- a/core/app/views/gaku/courses/edit.js.erb
+++ b/core/app/views/gaku/courses/edit.js.erb
@@ -1,3 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("modal", {:course => @course}) %>');
 $('#course-modal').modal('show');
-$('.modal-body form').validationEngine();
+//$('.modal-body form').validationEngine();
