--- a/core/app/views/gaku/admin/schools/update.js.erb
+++ b/core/app/views/gaku/admin/schools/update.js.erb
@@ -4,4 +4,4 @@ $("#edit-school-modal").modal("hide");
 $(".school_info").html('<%= render_js_partial("fields", {:school => @school}) %>');
 showNotice("<%= render_flash %>");
 
-$('#admin-school-information table tbody tr').html('<%= render_js_partial("school_fields", {:school => @school}) %>')
+$('#admin-school-information table tbody tr').html('<%= render_js_partial("fields", {:school => @school}) %>')
