[fix] commute method type crud in students/show

--- a/core/app/views/gaku/students/commute_methods/edit.js.erb
+++ b/core/app/views/gaku/students/commute_methods/edit.js.erb
@@ -1,3 +1,3 @@
-$('#student-commute-method-form').html('<%= render_js_partial("gaku/students/commute_methods/form") %>');
+$('#student-commute-method-form').html('<%= render_js_partial("gaku/students/commute_methods/form") %>').slideDown();
 $('#edit-student-commute-method-link').hide()
 $('span#commute-method').hide()
