--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -45,4 +45,4 @@
             -if student.commute_method
               =render 'gaku/students/commute_methods/commute_method', :student => student
             -else
-              =link_to t(:add), new_student_commute_method_path(student, @new_commute_method), :remote => true, :id => 'new-student-commute-method-link'
+              =ajax_link_to_new t(:add), [:new, student, :commute_method], :id => 'new-student-commute-method-link'
