--- a/core/app/views/gaku/students/commute_methods/new.js.erb
+++ b/core/app/views/gaku/students/commute_methods/new.js.erb
@@ -1,2 +1,2 @@
-$('#student-commute-method-form').html('<%= render_js_partial("gaku/students/commute_methods/form") %>');
+$('#student-commute-method-form').html('<%= render_js_partial("gaku/students/commute_methods/form") %>').slideDown();
 $('#new-student-commute-method-link').hide()
