[locales] fix locales for commute method

--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -38,7 +38,7 @@
         th.btn-c2 = t('scholarship_status')
         td =student.scholarship
       tr
-        th.btn-c2 = t('commute_method')
+        th.btn-c2 = t('commute_method.singular')
         td
           #student-commute-method
             #student-commute-method-form
