--- a/core/app/views/gaku/courses/enrollments/students/_modal.html.slim
+++ b/core/app/views/gaku/courses/enrollments/students/_modal.html.slim
@@ -7,6 +7,9 @@
       'x
   .modal-body
     =render 'gaku/students/student_chooser'
+    .row-fluid
+      #student-index-div
+        = render 'gaku/students/students'
     = link_to_cancel :class => 'span3 btn btn-danger', :id => 'cancel-course-student-link'
 
-  
+
