--- a/core/app/views/gaku/admin/presets/grading.html.slim
+++ b/core/app/views/gaku/admin/presets/grading.html.slim
@@ -2,10 +2,10 @@
   = well_div do
 
     = fields_for :presets do |grading_method|
-      = grading_method.text_field :grading_method, :value => @preset_hash[:grading_method], :label => t(:'admin.preset.grading.grading_method')
+      = grading_method.text_field :grading_method, :value => @preset_hash[:grading_method], :label => t(:'preset.grading.grading_method')
 
     = fields_for :presets do |grading_scheme|
-      = grading_scheme.text_field :grading_scheme, :value => @preset_hash[:grading_scheme], :label => t(:'admin.preset.grading.grading_scheme')
+      = grading_scheme.text_field :grading_scheme, :value => @preset_hash[:grading_scheme], :label => t(:'preset.grading.grading_scheme')
 
   = well_div do
-    = submit_button t(:'admin.preset.save')
+    = submit_button t(:'preset.save')
