fix courses edit from show

--- a/core/app/views/gaku/courses/show.html.slim
+++ b/core/app/views/gaku/courses/show.html.slim
@@ -5,7 +5,7 @@
   = t(:'course.show')
 
 = well_div do
-  = table do
+  = table_for('course-table') do
     thead
       tr
         = th t(:'course.code')
