[admissions] Refactor admission_methods views

--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/destroy.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.admin-admission-method-admission-phases-count').html('<%= print_count(@admission_phases_count - 1, t("admission_phases.list")) %>');
+$('.admin-admission-method-admission-phases-count').html('<%= print_count(@admission_phases_count-1, t("admission_phases.list")) %>');
