--- a/admissions/app/views/gaku/admin/admission_methods/create.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/create.js.erb
@@ -4,4 +4,4 @@ $('#new-admin-admission-method').slideToggle();
 $('#new-admin-admission-method-link').show();
 
 showNotice("<%= render_flash %>");
-$('.admin-admission-methods-count').html('<%= print_count(@admission_methods_count + 1, t("admission_methods.list")) %>');
+$('.admin-admission-methods-count').html('<%= print_count(@count+1, t("admission_methods.list")) %>');
