--- a/admissions/app/views/gaku/admin/admission_methods/destroy.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.admin-admission-methods-count').html('<%= print_count(@admission_methods_count - 1, t("admission_methods.list")) %>');
+$('.admin-admission-methods-count').html('<%= print_count(@count-1, t("admission_methods.list")) %>');
