--- a/admissions/app/views/gaku/admin/admission_methods/edit.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/edit.js.erb
@@ -1,2 +1,3 @@
-$('#modal-dialogs').html('<%= render_js_partial("admission_method_modal", {:admission_method => @admission_method}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("modal", {:admission_method => @admission_method}) %>');
 $('#edit-admission-method-modal').modal('show');
+$('.remote-form').enableValidations();
