--- a/admissions/app/views/gaku/admin/admission_methods/_form.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/_form.html.slim
@@ -1,12 +1,3 @@
-= form_for [:admin, @admission_method], :remote => true do |admission_method_form|
-  - if admission_method_form.object.new_record?
-    b= t('admission_methods.new')
-    .row-fluid.mt-l
-      .span12.well
-        = admission_method_form.label :name, t("admission_methods.name")
-        = admission_method_form.text_field :name, :class => "span12"
-        .row-fluid
-          .span12
-            .span6
-              =submit_button t('admission_methods.save'), :id => 'submit-admin-admission-method-button'
-            = link_to_cancel :id => 'cancel-admin-admission-method-link'
+= remote_form_for [:admin, @admission_method] do |f|
+  = render 'form_fields', :f => f
+  = buttons_for @admission_method, :nested_id => 'admin-admission-method',  :label => t(:'admission_methods.save')
