--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/update.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/update.js.erb
@@ -1,3 +1,3 @@
-$('tr#admission-method-admission-phase-<%= @admission_phase.id %>').html('<%= render_js_partial("admission_phase_fields", {:admission_phase => @admission_phase}) %>');
+$('tr#admission-method-admission-phase-<%= @admission_phase.id %>').html('<%= render_js_partial("fields", {:admission_phase => @admission_phase}) %>');
 $("#edit-admission-method-admission-phase-modal").modal("hide");
 showNotice("<%= render_flash %>");
