--- a/admissions/app/views/gaku/admin/admission_methods/new.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-admin-admission-method').html('<%= render_js_partial("form") %>').slideDown()
 $('#new-admin-admission-method-link').hide();
+$('.remote-form').enableValidations();
