--- a/admissions/app/views/gaku/admin/admission_methods/show.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/show.html.slim
@@ -1,6 +1,6 @@
 .row-fluid
   .span12.well
-    table.table.table-bordered.table-striped
+    = table do
       tbody
         tr
           td = @admission_method.name
